<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/_12sdp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_or_icon"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSearch"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:src="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_or_icon"/>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/mi_cartera"
        android:textColor="@color/text_or_icon"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/imageBack"
        app:layout_constraintEnd_toStartOf="@id/imageSearch"
        app:layout_constraintStart_toEndOf="@id/imageBack"
        app:layout_constraintTop_toTopOf="@id/imageBack"
        />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageProfile"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        app:riv_oval="true"/>

    <TextView
        android:id="@+id/textUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/sasuke_uchiha"
        android:textColor="@color/text_or_icon"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageProfile"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_4sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/dashboard_item_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/text_or_icon"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageAccount"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginLeft="@dimen/_24sdp"
        android:src="@drawable/ic_dashboard"
        app:layout_constraintBottom_toBottomOf="@id/fabAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/fabAdd"
        app:tint="@color/text_or_icon"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSettings"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginRight="@dimen/_24sdp"
        android:src="@drawable/ic_round_data_usage_24"
        app:layout_constraintBottom_toBottomOf="@id/fabAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/fabAdd"
        app:tint="@color/text_or_icon"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        app:constraint_referenced_ids="cardEUR, cardUSD, cardUSD2, cardUSD3"
        app:flow_horizontalGap="@dimen/_8sdp"
        app:flow_maxElementsWrap="2"
        app:flow_verticalGap="@dimen/_8sdp"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toTopOf="@id/fabAdd"
        app:layout_constraintTop_toBottomOf="@id/textUserName"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardEUR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dashboard_item_1"
        app:cardCornerRadius="@dimen/_16sdp"
        app:cardUseCompatPadding="true">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="@dimen/_16sdp">

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/eur"
             android:textColor="@color/text_or_icon"
             android:textSize="@dimen/_13ssp"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_4sdp"
             android:text="@string/_192_42"
             android:textColor="@color/text_or_icon"
             android:textSize="@dimen/_16ssp"
             android:textStyle="bold"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
             android:text="@string/savings"
             android:textColor="@color/text_or_icon"
             android:textSize="@dimen/_13sdp"/>
      </LinearLayout>
     </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardUSD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dashboard_item_2"
        app:cardCornerRadius="@dimen/_16sdp"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usd"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_13ssp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/_994_10"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/main_income"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_13sdp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardUSD2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dashboard_item_3"
        app:cardCornerRadius="@dimen/_16sdp"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usd"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_13ssp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/_321_42"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/expense"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_13sdp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardUSD3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dashboard_item_4"
        app:cardCornerRadius="@dimen/_16sdp"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usd"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_13ssp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/_3_892_13"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/assets"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_13sdp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>